--- a/pins.ucf
+++ b/pins.ucf
@@ -17,3 +17,11 @@ NET b<0>  LOC = "L22";
 NET b<1>  LOC = "K21";
 NET b<2>  LOC = "G23";
 NET b<3>  LOC = "G24";
+NET led<7> LOC = "D25";
+NET led<6> LOC = "D24";
+NET led<5> LOC = "G21";
+NET led<4> LOC = "H20";
+NET led<3> LOC = "K22";
+NET led<2> LOC = "N19";
+NET led<1> LOC = "P25";
+NET led<0> LOC = "P18";
